[gd_scene load_steps=38 format=3 uid="uid://1p2m5d3jdn6i"]

[ext_resource type="Script" uid="uid://du5lovmkjb4v5" path="res://src/scenes/Game/PlayerCharacter/Character.gd" id="1_h7irl"]
[ext_resource type="Texture2D" uid="uid://tqc0bbllcm6b" path="res://assets/images/playerCharacters/RopeWaterSprite.png" id="2_j0y4q"]
[ext_resource type="Texture2D" uid="uid://dd5kdtjletn0r" path="res://assets/images/playerCharacters/WaterParticle_1.png" id="2_uxgq5"]
[ext_resource type="Script" uid="uid://bok3ogflem005" path="res://src/scenes/Game/PlayerCharacter/Platform.gd" id="3_ct1ul"]
[ext_resource type="Texture2D" uid="uid://wg6hcgmapqah" path="res://assets/images/playerCharacters/blueSpiritidle.png" id="3_emnkp"]
[ext_resource type="Script" uid="uid://ciy4kapn57pbb" path="res://src/scenes/Game/PlayerCharacter/Rope.gd" id="4_emnkp"]
[ext_resource type="Texture2D" uid="uid://cw7piruksfhxr" path="res://assets/images/playerCharacters/FireParticle_1.png" id="4_uxgq5"]
[ext_resource type="Texture2D" uid="uid://blum6ymgo3ywn" path="res://assets/images/playerCharacters/Water Elemental O.png" id="5_s41jm"]
[ext_resource type="Texture2D" uid="uid://lpbdhsa8748t" path="res://assets/images/playerCharacters/PlainParticle.png" id="6_08p4k"]
[ext_resource type="Texture2D" uid="uid://ceolfke3unw6r" path="res://assets/images/playerCharacters/RopeFireSprite.png" id="6_qgvce"]
[ext_resource type="Texture2D" uid="uid://ds2cnexx61vm6" path="res://assets/images/playerCharacters/Fire Elemental O.png" id="7_j2hj5"]
[ext_resource type="Texture2D" uid="uid://djhriutvg3jms" path="res://assets/images/playerCharacters/Platform1.png" id="9_j2hj5"]
[ext_resource type="PackedScene" uid="uid://cat8ed8simsd7" path="res://src/scenes/Game/Components/RainObstacle/SplashParticles.tscn" id="11_08p4k"]
[ext_resource type="Texture2D" uid="uid://ck1y506rcv7wn" path="res://assets/images/playerCharacters/Platform1_FireSide.png" id="14_aou6w"]
[ext_resource type="Texture2D" uid="uid://dpjq6dkeeppxp" path="res://assets/images/playerCharacters/Platform1_WaterSide.png" id="15_hu46i"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_hu46i"]
size = Vector2(100, 20)

[sub_resource type="Curve" id="Curve_61ysk"]
_limits = [0.0, 1.0, 0.0, 4.0]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.50996, 0.844456), 0.473509, 0.473509, 0, 0, Vector2(1.54582, 1), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_j0y4q"]
size = Vector2(100, 20)

[sub_resource type="Curve" id="Curve_j0y4q"]
_limits = [0.0, 1.0, 0.0, 4.0]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.751825, 0.646341), -0.956945, -0.956945, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="AtlasTexture" id="AtlasTexture_hi8o8"]
atlas = ExtResource("3_emnkp")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_geu4h"]
atlas = ExtResource("3_emnkp")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3jou"]
atlas = ExtResource("3_emnkp")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_td68q"]
atlas = ExtResource("3_emnkp")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pm7lo"]
atlas = ExtResource("3_emnkp")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rj53y"]
atlas = ExtResource("3_emnkp")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4xjt6"]
atlas = ExtResource("3_emnkp")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0y2s3"]
atlas = ExtResource("3_emnkp")
region = Rect2(224, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_q075j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hi8o8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_geu4h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3jou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_td68q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pm7lo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rj53y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4xjt6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0y2s3")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_pv250"]
radius = 20.0

[sub_resource type="Curve" id="Curve_04iwi"]
_limits = [0.0, 1.0, 0.0, 4.0]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.751825, 0.646341), -0.956945, -0.956945, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_hu46i"]
rough = true
bounce = 1.0
absorbent = true

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pv250"]
size = Vector2(193, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hu46i"]
size = Vector2(99, 14)

[sub_resource type="Animation" id="Animation_vt20b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedPlatform/RightPlatform:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedPlatform/LeftPlatform:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_aou6w"]
resource_name = "closeDoors"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedPlatform/LeftPlatform:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.309, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedPlatform/RightPlatform:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-1.309, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("RightPlatformCollider:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4, 0.7333, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(85.318, 47.3304), Vector2(63.128, 34.25), Vector2(52.238, 17.38), Vector2(48, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("RightPlatformCollider:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-1.309, 0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("LeftPlatformCollider:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.3333, 0.6, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-84.1886, 47.8134), Vector2(-64.733, 38.861), Vector2(-53.35, 25.381), Vector2(-48, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("LeftPlatformCollider:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.309, 0.0]
}

[sub_resource type="Animation" id="Animation_qgvce"]
resource_name = "openDoors"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedPlatform/RightPlatform:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -1.309]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedPlatform/LeftPlatform:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.309]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LeftPlatformCollider:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4, 0.666667, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-48, 0), Vector2(-53.35, 25.381), Vector2(-64.733, 38.861), Vector2(-84.1886, 47.8134)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("LeftPlatformCollider:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.309]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("RightPlatformCollider:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -1.309]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("RightPlatformCollider:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.266667, 0.6, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(48, 0), Vector2(52.238, 17.38), Vector2(63.128, 34.25), Vector2(85.318, 47.3304)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_aou6w"]
_data = {
&"RESET": SubResource("Animation_vt20b"),
&"closeDoors": SubResource("Animation_aou6w"),
&"openDoors": SubResource("Animation_qgvce")
}

[node name="PlayerCharacter" type="Node2D"]

[node name="LOrigin" type="Marker2D" parent="."]
position = Vector2(-90, -170)

[node name="ROrigin" type="Marker2D" parent="."]
position = Vector2(90, -170)

[node name="LeftRope" type="Line2D" parent="." node_paths=PackedStringArray("character", "platform", "platform_attachement")]
unique_name_in_owner = true
z_index = -2
texture_repeat = 2
width = 3.0
texture = ExtResource("2_j0y4q")
texture_mode = 1
script = ExtResource("4_emnkp")
springLength = 125.0
platformSpringStrength = 200.0
maxForce = 1500.0
character = NodePath("../LeftCharacter")
platform = NodePath("../Platform")
platform_attachement = NodePath("../Platform/Left Attachment")

[node name="ParticleMask" type="Sprite2D" parent="LeftRope"]
process_mode = 3
clip_children = 1
texture = SubResource("PlaceholderTexture2D_hu46i")
centered = false
offset = Vector2(0, -10)

[node name="GPUParticles2D" type="CPUParticles2D" parent="LeftRope/ParticleMask"]
emitting = false
amount = 10
texture = ExtResource("2_uxgq5")
lifetime = 5.0
preprocess = 5.0
fixed_fps = 30
local_coords = true
draw_order = 1
particle_flag_align_y = true
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 10.0
initial_velocity_max = 10.0
linear_accel_min = 20.0
linear_accel_max = 20.0
scale_amount_min = 3.0
scale_amount_max = 3.0
scale_amount_curve = SubResource("Curve_61ysk")

[node name="RightRope" type="Line2D" parent="." node_paths=PackedStringArray("character", "platform", "platform_attachement")]
unique_name_in_owner = true
texture_repeat = 2
width = 3.0
texture = ExtResource("6_qgvce")
texture_mode = 1
script = ExtResource("4_emnkp")
springLength = 125.0
platformSpringStrength = 200.0
maxForce = 1500.0
character = NodePath("../RightCharacter")
platform = NodePath("../Platform")
platform_attachement = NodePath("../Platform/Right Attachment")

[node name="ParticleMask" type="Sprite2D" parent="RightRope"]
process_mode = 3
clip_children = 1
texture = SubResource("PlaceholderTexture2D_j0y4q")
centered = false
offset = Vector2(0, -10)

[node name="GPUParticles2D" type="CPUParticles2D" parent="RightRope/ParticleMask"]
emitting = false
amount = 10
texture = ExtResource("4_uxgq5")
lifetime = 5.0
preprocess = 5.0
fixed_fps = 30
local_coords = true
draw_order = 1
particle_flag_align_y = true
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 10.0
initial_velocity_max = 10.0
linear_accel_min = 20.0
linear_accel_max = 20.0
scale_amount_min = 3.0
scale_amount_max = 3.0
scale_amount_curve = SubResource("Curve_61ysk")

[node name="LeftCharacter" type="Area2D" parent="." node_paths=PackedStringArray("_rope") groups=["Player"]]
unique_name_in_owner = true
position = Vector2(-86, -109)
collision_layer = 2
collision_mask = 224
script = ExtResource("1_h7irl")
_rope = NodePath("../LeftRope")
_radius = 100.0
_speed = 150.0
returnSpeed = 300.0

[node name="GPUParticles2D" type="CPUParticles2D" parent="LeftCharacter"]
process_mode = 3
emitting = false
amount = 20
texture = ExtResource("6_08p4k")
fixed_fps = 30
local_coords = true
draw_order = 1
emission_shape = 3
emission_rect_extents = Vector2(4, 15)
direction = Vector2(0, 1)
spread = 120.0
gravity = Vector2(0, 120)
initial_velocity_min = 5.0
initial_velocity_max = 10.0
angle_min = 45.0
angle_max = 45.0
scale_amount_max = 4.0
scale_amount_curve = SubResource("Curve_j0y4q")
color = Color(0.262745, 0.87451, 0.996078, 1)
hue_variation_min = -0.07
hue_variation_max = 0.03

[node name="Sprite2D" type="Sprite2D" parent="LeftCharacter"]
texture = ExtResource("5_s41jm")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="LeftCharacter"]
visible = false
sprite_frames = SubResource("SpriteFrames_q075j")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.751805
speed_scale = 1.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftCharacter"]
scale = Vector2(0.7, 1.2)
shape = SubResource("CircleShape2D_pv250")

[node name="SplashParticles" parent="LeftCharacter" instance=ExtResource("11_08p4k")]
position = Vector2(3, -17)

[node name="RightCharacter" type="Area2D" parent="." node_paths=PackedStringArray("_rope") groups=["Player"]]
unique_name_in_owner = true
position = Vector2(84, -109)
collision_layer = 2
collision_mask = 224
script = ExtResource("1_h7irl")
_suffix = "R"
_rope = NodePath("../RightRope")
element = 1
_radius = 100.0
_speed = 150.0
returnSpeed = 300.0

[node name="GPUParticles2D" type="CPUParticles2D" parent="RightCharacter"]
process_mode = 3
emitting = false
amount = 25
texture = ExtResource("6_08p4k")
lifetime = 1.2
fixed_fps = 30
local_coords = true
draw_order = 1
emission_shape = 3
emission_rect_extents = Vector2(0, 18)
direction = Vector2(0, -1)
spread = 56.386
gravity = Vector2(0, -50)
initial_velocity_min = 60.0
initial_velocity_max = 110.0
angle_min = 45.0
angle_max = 45.0
scale_amount_max = 5.0
scale_amount_curve = SubResource("Curve_04iwi")
color = Color(1, 0.168627, 0.396078, 1)
hue_variation_min = -0.08
hue_variation_max = 0.2

[node name="Sprite2D" type="Sprite2D" parent="RightCharacter"]
texture = ExtResource("7_j2hj5")

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="RightCharacter"]
visible = false
self_modulate = Color(0.995932, 0.064121, 0.099692, 1)
sprite_frames = SubResource("SpriteFrames_q075j")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.637282
speed_scale = 1.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightCharacter"]
scale = Vector2(0.7, 1.2)
shape = SubResource("CircleShape2D_pv250")

[node name="SplashParticles2" parent="RightCharacter" instance=ExtResource("11_08p4k")]
position = Vector2(2, -17)

[node name="Platform" type="RigidBody2D" parent="." groups=["PlayerPlatform"]]
physics_interpolation_mode = 1
position = Vector2(0, 25)
collision_layer = 232
mass = 10.0
physics_material_override = SubResource("PhysicsMaterial_hu46i")
angular_damp = 24.182
script = ExtResource("3_ct1ul")

[node name="StaticPlatformCollider" type="CollisionShape2D" parent="Platform"]
shape = SubResource("RectangleShape2D_pv250")

[node name="RightPlatformCollider" type="CollisionShape2D" parent="Platform"]
position = Vector2(48, 0)
shape = SubResource("RectangleShape2D_hu46i")
disabled = true

[node name="LeftPlatformCollider" type="CollisionShape2D" parent="Platform"]
position = Vector2(-48, 0)
shape = SubResource("RectangleShape2D_hu46i")
disabled = true

[node name="StaticPlatform" type="Node2D" parent="Platform"]

[node name="Sprite2D" type="Sprite2D" parent="Platform/StaticPlatform"]
texture = ExtResource("9_j2hj5")
region_rect = Rect2(144, 36, 55, 18)

[node name="AnimatedPlatform" type="Node2D" parent="Platform"]

[node name="RightPlatform" type="Sprite2D" parent="Platform/AnimatedPlatform"]
position = Vector2(98, 0)
texture = ExtResource("14_aou6w")
centered = false
offset = Vector2(-101, -8.5)
region_rect = Rect2(98, 0, 98, 17)

[node name="LeftPlatform" type="Sprite2D" parent="Platform/AnimatedPlatform"]
position = Vector2(-97, 0)
texture = ExtResource("15_hu46i")
centered = false
offset = Vector2(0, -8.5)
region_rect = Rect2(0, 0, 98, 17)

[node name="Left Attachment" type="Node2D" parent="Platform"]
position = Vector2(-90, -5)

[node name="Right Attachment" type="Node2D" parent="Platform"]
position = Vector2(90, -5)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Platform"]
libraries = {
&"": SubResource("AnimationLibrary_aou6w")
}

[node name="SplashParticles" parent="Platform" instance=ExtResource("11_08p4k")]
position = Vector2(-85, -13)

[node name="SplashParticles2" parent="Platform" instance=ExtResource("11_08p4k")]
position = Vector2(-39, -9)

[node name="SplashParticles3" parent="Platform" instance=ExtResource("11_08p4k")]
position = Vector2(0, -11)

[node name="SplashParticles4" parent="Platform" instance=ExtResource("11_08p4k")]
position = Vector2(45, -10)

[node name="SplashParticles5" parent="Platform" instance=ExtResource("11_08p4k")]
position = Vector2(92, -9)

[connection signal="area_entered" from="LeftCharacter" to="LeftCharacter" method="_collideArea"]
[connection signal="area_entered" from="RightCharacter" to="RightCharacter" method="_collideArea"]
